--- a/src/main.css
+++ b/src/main.css
@@ -42,6 +42,11 @@ body {
 	outline: 0;
 }
 
+.noteLabel {
+	color: rgb(192, 192, 192);
+	font-size: 25px;
+}
+
 .animate {
 	background-color: #97B5DA;
 	animation-name: slideout;
@@ -50,9 +55,4 @@ body {
 
 @keyframes slideout {
 	to {margin-top: 100%; opacity:0;}
-}
-
-.noteLabel {
-	color: white;
-	font-size: 25px;
 }
