--- a/src/main.css
+++ b/src/main.css
@@ -12,11 +12,43 @@ body {
 	background-color: rgb(63, 63, 63);
 }
 
+input {
+  display: none;
+}
+
+menu {
+  display: flex;
+  justify-content: center;
+  margin: 80px auto 0 auto;
+  width: 280px;
+}
+
+menu label {
+  font-size: 18px;
+  padding: 10px;
+}
+
+menu label:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+input[type="radio"]:checked+label {
+  background-color: #FFFFF0;
+}
+
+input[type="radio"]:not(:checked)+label {
+  border: 1px solid black
+}
+
+.hidden {
+  display: none;
+}
+
 #keyboard {
 	display: flex;
 	justify-content: center;
 	border-radius: 0 0 5px 5px;
-	margin-top: 100px;
+	margin-top: 50px;
 }
 
 .whiteKey {
@@ -42,9 +74,18 @@ body {
 	outline: 0;
 }
 
-.noteLabel {
-	color: rgb(192, 192, 192);
-	font-size: 25px;
+.keyLabel {
+	color: #FFFFF0;
+  font-size: 25px;
+  text-align: center;
+  width: 30px;
+}
+
+.buttonLabel {
+  border: 1px solid black;
+  background-color: rgb(46, 46, 46);
+  border-radius: 3px;
+  box-shadow: 1px 1px black;
 }
 
 .animate {
